--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ img {
   visibility: hidden;
 }
 .container {
-  width: 1128px;
+  width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -53,6 +53,14 @@ img {
   justify-content: center;
 }
 .header-navigation {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+}
+.header-container {
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
 .header-link:hover,
 .header-link:focus,
@@ -82,6 +90,7 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #2e2f42;
+  margin-right: 76px;
 }
 
 .header-link {
@@ -89,6 +98,10 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: inherit;
+}
+.header-list {
+  display: flex;
+  gap: 40px;
 }
 
 .contact-link {
@@ -100,10 +113,9 @@ body {
 /* HERO */
 .hero {
   background-color: #2e2f42;
-  text-align: center;
+
   outline: 2px solid tomato;
   padding-top: 24px;
-  align-items: center;
 }
 .hero-title {
   font-size: 56px;
@@ -113,6 +125,7 @@ body {
   padding-top: 188px;
 }
 .hero-btn {
+  min-width: 169px;
   font-size: 16px;
   line-height: 1.5;
   display: inline-block;
@@ -125,6 +138,8 @@ body {
   padding: 16px 32px;
   margin-bottom: 188px;
   margin-top: 48px;
+}
+.hero-container {
 }
 
 /* ADVANTAGES */
@@ -162,10 +177,12 @@ body {
   gap: 24px;
   padding-top: 120px;
   padding-bottom: 120px;
+  /* justify-content: center; */
 }
 .working-list {
   display: flex;
   gap: 24px;
+  justify-content: center;
 }
 
 /* footer */
@@ -203,4 +220,17 @@ body {
   border-radius: 4px;
   color: var(--accent-color);
   cursor: pointer;
+  padding: 12px 24px;
+}
+.portfolio-list {
+  display: flex;
+  justify-content: center;
+  display: flex;
+  gap: 24px;
+  margin-bottom: 72px;
+}
+.visually-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
 }
