--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
-html {
+/* html {
   box-sizing: border-box;
 }
 *,
 *::before,
 *::after {
   box-sizing: inherit;
-}
+} */
 :root {
   --primary-text-color: #ffffff;
   --title-text-color: #434455;
@@ -109,37 +109,40 @@ body {
   letter-spacing: 0.02em;
   color: var(--title-text-color);
   font-style: normal;
+  display: flex;
+  justify-content: center;
 }
 /* HERO */
 .hero {
   background-color: #2e2f42;
-
-  outline: 2px solid tomato;
-  padding-top: 24px;
+  padding-top: 188px;
+  padding-bottom: 188px;
+  align-items: center;
 }
 .hero-title {
+  font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   max-width: 500px;
   color: var(--primary-text-color);
-  padding-top: 188px;
+  padding-bottom: 48px;
+
+  margin-left: auto;
+  margin-right: auto;
 }
 .hero-btn {
-  min-width: 169px;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+  font-weight: 500;
   font-size: 16px;
-  line-height: 1.5;
-  display: inline-block;
-  letter-spacing: 0.04em;
+
+  min-width: 169px;
+  min-height: 56px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   color: var(--primary-text-color);
   background: var(--accent-color);
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  padding: 16px 32px;
-  margin-bottom: 188px;
-  margin-top: 48px;
-}
-.hero-container {
 }
 
 /* ADVANTAGES */
@@ -167,6 +170,9 @@ body {
   padding-bottom: 72px;
 }
 
+.team {
+  background-color: #f4f4fd;
+}
 .team-content {
   padding-top: 32px;
   padding-bottom: 32px;
