--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,7 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
 .hero-btn {
   display: block;
   border: none;
@@ -137,7 +138,7 @@ body {
   border-radius: 4px;
   font-weight: 500;
   font-size: 16px;
-
+  line-height: 1.5;
   min-width: 169px;
   min-height: 56px;
   padding-top: 16px;
