--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,8 @@ ul {
 }
 img {
   display: block;
+  width: 100%;
+  height: auto;
 }
 .list {
   list-style: none;
@@ -59,8 +61,9 @@ img {
 }
 .header-container {
   display: flex;
-  align-items: center;
   gap: 40px;
+  justify-content: space-between;
+  align-items: center;
 }
 .header-link:hover,
 .header-link:focus,
@@ -145,10 +148,16 @@ body {
   padding-bottom: 16px;
   color: var(--primary-text-color);
   background: var(--accent-color);
+  margin-left: auto;
+  margin-right: auto;
+}
+.section {
+  padding-bottom: 120px;
+  padding-top: 120px;
 }
 
 /* ADVANTAGES */
-.advantages {
+.advantages-content {
 }
 .section-subtitle {
   font-weight: 500;
@@ -156,11 +165,18 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
+  text-align: center;
+}
+.section-item {
+  width: calc((100% - 72px) / 4);
+  flex-grow: 0;
 }
 .section-desc {
+  white-space: normal;
   line-height: 1.5;
-  letter-spacing: 0.02em;
   color: var(--title-text-color);
+
+  font-size: 16px;
 }
 
 .section-title {
@@ -168,29 +184,43 @@ body {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  text-align: center;
-  padding-bottom: 72px;
+  display: block;
+  align-self: center;
 }
 
-.team {
-  background-color: #f4f4fd;
-}
-.team-content {
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
 .section-list {
   display: flex;
-  text-align: center;
   gap: 24px;
-  padding-top: 120px;
+}
+.team {
+  background-color: #f4f4fd;
   padding-bottom: 120px;
-  /* justify-content: center; */
+}
+.team-content {
+  padding: 16px 32px;
+}
+.work {
+  padding-bottom: 120px;
+}
+.work-container {
+  display: flex;
+  flex-direction: column;
+  gap: 72px;
 }
 .working-list {
   display: flex;
   gap: 24px;
-  justify-content: center;
+  align-items: center;
+  margin-left: 0;
+  margin-right: 0;
+}
+.working-item {
+  flex-basis: calc((100% - 48px) / 3);
+}
+.team-container {
+  display: flex;
+  flex-direction: column;
+  gap: 72px;
 }
 
 /* footer */
@@ -213,6 +243,10 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #e7e9fc;
+}
+.footer-content {
+  width: 265px;
+  margin-left: auto;
 }
 
 /* .portfolio { */
