--- a/css/styles.css
+++ b/css/styles.css
@@ -57,10 +57,9 @@ img {
 }
 
 .header {
-  align-items: center;
   padding-top: 24px;
   padding-bottom: 24px;
-  justify-content: center;
+  border-bottom: 1px solid #e7e9fc;
 }
 .header-navigation {
   display: flex;
@@ -69,13 +68,8 @@ img {
 }
 .header-container {
   display: flex;
-  gap: 40px;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid #e7e9fc;
+
   /* outline: 2px solid tomato; */
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 .header-link:hover,
 .header-link:focus,
@@ -96,6 +90,10 @@ body {
   background-color: var(--primary-text-color);
   font-size: 16px;
   color: var(--subtitle-color);
+}
+.section {
+  padding-bottom: 120px;
+  padding-top: 120px;
 }
 /* HEADER */
 .logo {
@@ -124,15 +122,12 @@ body {
   letter-spacing: 0.02em;
   color: var(--title-text-color);
   font-style: normal;
-  display: flex;
-  justify-content: center;
 }
 /* HERO */
 .hero {
   background-color: #2e2f42;
   padding-top: 188px;
   padding-bottom: 188px;
-  align-items: center;
 }
 .hero-title {
   font-weight: 700;
@@ -140,7 +135,7 @@ body {
   line-height: 1.07;
   max-width: 500px;
   color: var(--primary-text-color);
-  padding-bottom: 48px;
+  margin-bottom: 48px;
 
   margin-left: auto;
   margin-right: auto;
@@ -163,10 +158,6 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-.section {
-  padding-bottom: 120px;
-  padding-top: 120px;
-}
 
 /* ADVANTAGES */
 .advantages-content {
@@ -176,11 +167,12 @@ body {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 .section-item {
   width: calc((100% - 72px) / 4);
   flex-grow: 0;
+  background-color: var(--primary-text-color);
 }
 .section-desc {
   white-space: normal;
@@ -195,8 +187,8 @@ body {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  display: block;
-  align-self: center;
+  margin-bottom: 72px;
+  text-align: center;
 }
 
 .section-list {
@@ -205,18 +197,15 @@ body {
 }
 .team {
   background-color: #f4f4fd;
-  padding-bottom: 120px;
 }
 .team-content {
-  padding: 16px 32px;
+  padding: 32px;
+  text-align: center;
 }
 .work {
-  padding-bottom: 120px;
+  padding-top: 0;
 }
 .work-container {
-  display: flex;
-  flex-direction: column;
-  gap: 72px;
 }
 .working-list {
   display: flex;
@@ -229,37 +218,30 @@ body {
   flex-basis: calc((100% - 48px) / 3);
 }
 .team-container {
-  display: flex;
-  flex-direction: column;
-  gap: 72px;
-  text-align: center;
 }
 
 /* footer */
 
 .footer {
   background: #2e2f42;
-  padding: 100px 1020px 100px 156px;
+  padding: 100px 0;
 }
 .footer-logo {
   font-weight: 800;
   font-size: 18px;
   line-height: 1.16;
-  display: flex;
-  align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #f4f4fd;
 }
 
 .footer-desc {
-  padding-top: 16px;
+  margin-top: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #e7e9fc;
 }
 .footer-content {
-  width: 300px;
 }
 
 .portfolio {
